2012-15-10 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: allow nargs="+" for args.configFile, so that user
	can access e.g. sys.argv[-1] themselves - this was not allowed due to
	strict number of args checking by argparse

2012-15-05 Max Baak <mbaak@cern.ch>
	M python/systematic.py
        * Another fix needed for case below where treeName would be improperly set
        M python/sample.py 
        M src/Utils.cxx
	* converted two warning statements into info.
	* Tagged as HistFitter-00-00-21-01

2012-12-05 Alex Koutsman <alex.koutsman@cern.ch>
	* scripts/YieldsTableTex.py: negative errors on yields are now automatically truncated in case they are larger than the central bkg value
	* Tagging HistFitter-00-00-21

2012-12-04 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* channelxml.py and topLevelxml.py recreated for backwards compatibility.

2012-12-04 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Fixed issue where treeName would be improperly set for weight-based
	systematics. The solution assumes the old code, and checks if the tree
	name exists. If not, a treeName set to the name of the associated sample
	(plus possible prefix) is used for both high and low. This issue stems
	from a philosophical difference in approach with inputs: one tree
	containing branches for high and low, versus two trees (one each for high
	and low respectively). Issue needs more permanent resolving; current code
	is several hacks on top of each other.

2012-12-03 Max Baak <mbaak@cern.ch>
	M       configManager.py
	M       fitConfig.py
	* New feature: for overall sys, possibly use different channel to evaluate systematics
	M       prepareHistos.py
	M       configManager.py
	M       sample.py
	M       systematic.py


2012-12-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
    * scripts/HistFitter.py: missing nargs="+", strings would get chopped up

2012-11-27 Alex Koutsman <alex.koutsman@cern.ch>